2007-10-28  Lars Lindner  <lars.lindner@gmail.com>

Reviewed by Alp.

        http://bugs.webkit.org/show_bug.cgi?id=15466
        [gtk] widget does not take focus on mouse click

        Grab widget focus in mouse press callback.

        * Api/webkitgtkpage.cpp:



Canonical link: https://commits.webkit.org/21089@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@27168 268f45cc-cd09-0410-ab3c-d52691b4dbfc